table fix on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,12 @@
   display: flex;
   justify-content: space-between;
 }
+.tableLeft{
+  text-align: left;
+}
+.tableRight{
+  text-align: right;
+}
 
 #credits {
   margin-top: 2rem;
